Finished guess_num program

--- a/web_app/views/index.erb
+++ b/web_app/views/index.erb
@@ -1,3 +1,16 @@
 <!-- Give this page a title -->
 
 <!-- Add a form for user input -->
+
+<html>
+<head>
+	<title>Our Web App</title>
+</head>
+<body>
+<h1>Select a number between 1 and 10</h1>
+<form action="/answer" method="post">
+	<input type="text" name="the_guess">
+	<input type="submit">
+</form>
+</body>
+</html>
